[project]
name = "solbot-cache-preloader"
version = "0.2.1"
description = "Cache preloading service for Solana Trading Bot"
authors = [{ name = "mkdir700", email = "mkdir700@gmail.com" }]
dependencies = [
    "solbot-cache",
    "solbot-db",
    "solbot-services",
    "solbot-common",
    "solbot-yellowstone-grpc",
]
requires-python = "==3.10.*"
license = { text = "Apache-2.0" }

[tool.uv.sources]
solbot-cache = { path = "../../libs/cache", editable = true }
solbot-db = { path = "../../libs/db", editable = true }
solbot-services = { path = "../../libs/services", editable = true }
solbot-common = { path = "../../libs/common", editable = true }
solbot-yellowstone-grpc = { path = "../../libs/yellowstone_grpc", editable = true }
