[project]
name = "solbot-tgbot"
version = "0.2.1"
description = "Telegram bot for Solana trading"
authors = [{ name = "mkdir700", email = "mkdir700@gmail.com" }]
dependencies = [
    # Telegram Bot 框架
    "aiogram>=3.15.0",
    "aiohttp<3.11,>=3.9.0",

    # 数据库和缓存
    "aioredis[hiredis]>=2.0.1",
    "aiomysql>=0.2.0",
    "aiocache[redis]>=0.12.3",
    "sqlmodel>=0.0.22",

    # 配置和序列化
    "pydantic-settings>=2.6.1",
    "pydantic-settings-toml>=0.2.0",
    "orjson>=3.10.11",
    "tomli>=2.1.0",

    # 模板引擎
    "jinja2>=3.1.4",

    # Solana 相关
    "solana>=0.35.1",
    "solders>=0.25.0",
    "base58>=2.1.1",
    "anchorpy>=0.20.1",
    "solana-tx-parser>=0.0.1",

    # 工具库
    "backoff>=2.2.1",
    "cryptography>=44.0.0",
    "loguru>=0.7.2",

    # 监控
    "sentry-sdk>=2.21.0",

    # 本地依赖
    "solbot-cache",
    "solbot-db",
    "solbot-services",
    "solbot-common",
    "solbot-yellowstone-grpc",
]
requires-python = "==3.10.*"
license = { text = "Apache-2.0" }

[tool.uv.sources]
solbot-cache = { path = "../../libs/cache", editable = true }
solbot-db = { path = "../../libs/db", editable = true }
solbot-services = { path = "../../libs/services", editable = true }
solbot-common = { path = "../../libs/common", editable = true }
solbot-yellowstone-grpc = { path = "../../libs/yellowstone_grpc", editable = true }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
